test/e2e/artifacts/environments/kubernetes-base/openshift/patch-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route
spec:
  to:
    name: "${PROJECT_NAME}-service"
