test/e2e/artifacts/environments/kubernetes-base/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route
spec:
  to:
    kind: Service
    name: placeholder
  port:
    targetPort: 8080
  tls:
    termination: edge
